Refactor(SE-62): Adjustments to image storage